WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
154621
arrayProtoFuncConcat doesn't check for an exception after allocating an array
https://bugs.webkit.org/show_bug.cgi?id=154621
Summary
arrayProtoFuncConcat doesn't check for an exception after allocating an array
Saam Barati
Reported
2016-02-23 17:54:31 PST
introduced in:
http://trac.webkit.org/changeset/195878
Attachments
patch
(1.30 KB, patch)
2016-02-23 17:55 PST
,
Saam Barati
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2016-02-23 17:55:47 PST
Created
attachment 272072
[details]
patch
Michael Saboff
Comment 2
2016-02-23 17:59:35 PST
Comment on
attachment 272072
[details]
patch r=me
WebKit Commit Bot
Comment 3
2016-02-23 20:39:24 PST
Comment on
attachment 272072
[details]
patch Clearing flags on attachment: 272072 Committed
r197011
: <
http://trac.webkit.org/changeset/197011
>
WebKit Commit Bot
Comment 4
2016-02-23 20:39:29 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug