arrayProtoFuncConcat doesn't check for an exception after allocating an array https://bugs.webkit.org/show_bug.cgi?id=154621

Reviewed by Michael Saboff.

* runtime/ArrayPrototype.cpp:
(JSC::arrayProtoFuncConcat):


Canonical link: https://commits.webkit.org/172717@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@197011 268f45cc-cd09-0410-ab3c-d52691b4dbfc